Setup an example of the value/price balance problem

--- a/fake_data/one.yaml
+++ b/fake_data/one.yaml
@@ -44,6 +44,16 @@ entries:
 when: 2019-01-03
 description: Withdrawing Dollars in San Fransisco
 entries:
-  - Assets:Cash             100 $ for 48 £
+  - Assets:Cash             -50 £
   - Expenses:BankFee        2 £
-  - Assets:Cash             £
+  - Expenses:Exchange       48 £
+  - Assets:Cash             100 $
+  - Income:Exchange         -100 $
+
+---
+
+when: 2019-01-04
+description: Using dollars to buy a coffee
+entries:
+  - Expenses:Food_&_Drink:Coffee     4.00 $
+  - Assets:Monzo:Card                $
