Completely removed the concept of 'price'

--- a/fake_data/two.yaml
+++ b/fake_data/two.yaml
@@ -1,6 +1,8 @@
 when: 2019-01-03
 description: Withdrawing Dollars in San Fransisco
 entries:
-  - Assets:Cash             -50 £
-  - Expenses:BankFee        2 £
-  - Assets:Cash             100 $ for 48 £
+  - Assets:Monzo:Card           -50 £
+  - Expenses:BankFee            2 £
+  - Expenses:Exchange           48 £
+  - Assets:Cash                 100 $
+  - Income:Exchange             -100 $
