--- a/fake_data/one.yaml
+++ b/fake_data/one.yaml
@@ -1,8 +1,8 @@
 when: 2019-01-01
 description: Opening Balances
 entries:
-- Assets:Cash                       24.35 £
-- Assets:Monzo:Card       2567.05 £
+- Assets:Cash                       74.35 £
+- Assets:Monzo:Card                 2567.05 £
 - Assets:Monzo:Pots:Savings         400 £
 - Assets:Stocks                     23 GOOG
 - Income:OpeningBalances            £
@@ -16,7 +16,7 @@ labels:
   shop: Aldi
 entries:
 - Expenses:Groceries        112.43 £
-- Assets:Cash               £
+- Assets:Monzo:Card               £
 
 ---
 
@@ -55,5 +55,5 @@ entries:
 when: 2019-01-04
 description: Using dollars to buy a coffee
 entries:
-  - Expenses:Food_&_Drink:Coffee     4.00 $
-  - Assets:Monzo:Card                $
+  - Expenses:Food_&_Drink:Coffee      4.00 $
+  - Assets:Cash                       $
